# book_keeping_app

./: .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml  start-app.cmd  start-app.ps1
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: main.tsx  styles.css
dashboard/src/lib/: api.ts
docs/: architecture.md  developer_handoff.md  project_startup_template.md  user_manual.md
docs/references/: CODEX_PRIMARY_INSTRUCTIONS.md  README.md  chatgpt_gaap_sfrs_sme_bookkeeping_advice.md  chatgpt_internal_to_sme_product_strategy.md  chatgpt_sme_operating_framework_strategy.md
migrations/: README.md  env.py
migrations/versions/: 20260627_0001_baseline_current_schema.py  20260627_0002_projects_and_profitability.py  20260627_0003_supplier_bills.py  20260627_0004_supplier_payments_ap_ageing.py  20260627_0005_bank_reconciliation.py  20260627_0006_approval_requests.py  20260628_0007_audit_events.py
src/bookkeeping_app/: __init__.py  accounting.py  config.py  database.py  main.py  models.py  operations.py  schemas.py
tests/: test_approvals.py  test_audit_events.py  test_backup_export.py  test_bank_reconciliation.py  test_chart_of_accounts_import.py  test_employees.py  test_journal_validation.py  test_operational_transactions.py  test_payroll.py  test_projects.py  test_purchase_orders.py  test_sales_invoices.py  test_sales_orders.py  test_supplier_bills.py
